--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
           <p><strong>Full Stack Developer | Team Leader</strong></p>
         </div>
         <div class="member">
-          <h3>Param Mahajan</h3>
+          <h3>Parmanand Mahajan</h3>
           <p><strong>Backend Developer</strong></p>
         </div>
         <div class="member">
